# owid-covid-datasette

./: .gitignore  fly.toml  metadata.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
